--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,8 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
 
 [compat]
-Combinatorics = "1.0.2"
+Combinatorics = "1.0"
 HomotopyContinuation = "2.5"
 julia = "1.4"
+Combinatorics = "0.3"
+Suppressor = "0.2"
