--- a/Project.toml
+++ b/Project.toml
@@ -14,5 +14,5 @@ Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
 Combinatorics = "1.0"
 HomotopyContinuation = "2.5"
 julia = "1.4"
-Combinatorics = "0.3"
+DynamicPolynomials = "0.3"
 Suppressor = "0.2"
