--- a/Project.toml
+++ b/Project.toml
@@ -7,10 +7,12 @@ version = "0.1.1"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 HomotopyContinuation = "f213a82b-91d6-5c5d-acf7-10f1c761b327"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
 
 [compat]
 Combinatorics = "1.0"
 HomotopyContinuation = "2.5"
+Plots = "1.40.9"
 Suppressor = "0.2"
 julia = "1.4"
